# gf-core

./: .ghci  .gitignore  .stack.yaml.swp  .travis.yml  .txt2tagsrc  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  ServerInstructions.md  Setup.hs  WebSetup.hs  _post.html  _pre.html  cabal.project  flake.nix  gf.cabal  index.html  stack-ghc7.10.3.yaml  stack-ghc8.0.2.yaml  stack-ghc8.10.4.yaml  stack-ghc8.10.7.yaml  stack-ghc8.2.2.yaml  stack-ghc8.4.3.yaml  stack-ghc8.4.4.yaml  stack-ghc8.6.2.yaml  stack-ghc8.6.5.yaml  stack-ghc8.8.3.yaml  stack-ghc8.8.4.yaml  stack-ghc9.0.2.yaml  stack-ghc9.2.4.yaml  stack-ghc9.6.6.yaml  stack-ghc9.6.7.yaml  stack-lts-12.4.yaml  stack.yaml
.github/workflows/: build  build-all-versions.yml  build-binary-packages.yml  build-debian-package.yml  build-macos-package.yml  build-majestic.yml  build-python-package.yml  build-windows-binary.yml  build-windows-package.yml  windows-testing.yml
css/: style0.css
debian/: changelog  control  rules
demos/: index.html
doc/: Makefile  error-messages.txt  gf-bibliography.md  gf-developers-old-cabal.md  gf-developers-old-cabal.t2t  gf-developers.md  gf-developers.t2t  gf-editor-modes.md  gf-editor-modes.t2t  gf-help-full.txt  gf-people.md  gf-reference.t2t  gf-refman.html  gf-refman.md  gf-shell-reference.md  gf-shell-reference.t2t  gf-video-tutorials.md  icfp-2012.md  index.md  runtime-api.html
doc/errors/: gluing.md
doc/hackers-guide/: CompilationOverview.md  LambdaCalculus.md  README.md  memory_model.md  transactions.md
doc/tutorial/: gf-tutorial.t2t
download/: encoding-change.t2t  index-3.1.6.t2t  index-3.10.md  index-3.11.md  index-3.12.md  index-3.2.9.t2t  index-3.2.t2t  index-3.3.3.t2t  index-3.3.t2t  index-3.4.t2t  index-3.5.t2t  index-3.6.t2t  index-3.7.1.t2t  index-3.7.t2t  index-3.8.t2t  index-3.9.t2t  index.html  index.md  index.t2t  release-18-12.md  release-3.1.6.t2t  release-3.10.md  release-3.11.md  release-3.12.md  release-3.2.t2t  release-3.3.3.t2t  release-3.3.t2t  release-3.4.t2t  release-3.5.t2t  release-3.6.t2t  release-3.7.1.t2t  release-3.7.t2t  release-3.8.t2t  release-3.9.t2t  release-4.0.0.md
gf-book/examples/chapter2/: FoodIta.gf
gf-book/examples/chapter3/: ResIta.gf
gf-book/examples/chapter5/: LexFoodsFin.gf  LexFoodsGer.gf  LexFoodsSwe.gf
gf-book/examples/chapter7/: QueryFin.gf
gf-book/examples/chapter9/: ResIta.gf
grammars/resource/russian/: ResRus.gf
nix/: expose-all.patch  revert-new-cabal-madness.patch
src/compiler/: GF.hs  Setup.hs  WebSetup.hs  gf-main.hs  gf-repl.hs  gf-scribe.hs  gf.cabal
src/compiler/GF/: Compile.hs  CompileInParallel.hs  CompileOne.hs  Compiler.hs  CompilerAPI.hs  Haskell.hs  Interactive.hs  Interactive2.hs  Main.hs  Quiz.hs  Scribe.hs  Server.hs
src/compiler/SimpleEditor/: Convert.hs  JSON.hs  Syntax.hs
src/compiler/www/: gf-web-api.t2t  index.html
src/example-based/: gf-exb.cabal
src/programs/: gf-main.hs
src/runtime/c/: Dockerfile-wasm  INSTALL  Makefile.am  README.md  build_wasm  configure.ac  configure~  data.h  db.cxx  db.h  expr.h  install.sh  libpgf.pc.in  namespace.h  pgf.cxx  pgf.h  reader.cxx  reader.h  text.cxx  text.h  variant.h  vector.h
src/runtime/c/doc/: DESIDERATA.md  README.md  abstract_expressions.md  memory_model.md  transactions.md
src/runtime/c/gu/: defs.h  exn.c  exn.h  fun.h  map.c  map.h  mem.c  mem.h  seq.c  seq.h
src/runtime/c/pgf/: aligner.c  aligner.cxx  aligner.h  data.cxx  data.h  db.cxx  db.h  expr.c  expr.cxx  expr.h  generator.cxx  generator.h  graphviz.c  graphviz.cxx  graphviz.h  heap.h  ipc.cxx  ipc.h  jit.c  linearizer.c  linearizer.cxx  linearizer.h  literals.c  lookup.c  md5.cxx  md5.h  namespace.h  parser.c  parser.cxx  parser.h  parseval.c  pgf.c  pgf.cxx  pgf.h  phrasetable.cxx  phrasetable.h  printer.c  printer.cxx  printer.h  probspace.cxx  (+14 more)
src/runtime/c/sg/: sg.c  sqlite3Btree.c
src/runtime/haskell/: LPGF.hs  PGF.hs  PGF.hsc  PGF2.hsc  README.md  pgf.cabal  pgf2.cabal  stack-ghc7.10.3.yaml  stack.yaml  utils.c
src/runtime/haskell-bind/: CHANGELOG.md  HACKAGE.md  PGF2.hsc  README  README.md  SG.hsc  pgf2.cabal  stack-ghc8.0.2.yaml  stack-ghc8.10.4.yaml  stack-haddock-upload.sh  stack.yaml  test.hs  utils.c
src/runtime/haskell-bind/PGF2/: Expr.hsc  FFI.hsc  Internal.hsc  Type.hsc
src/runtime/haskell/Data/Binary/: Builder.hs  Get.hs  Put.hs
src/runtime/haskell/LPGF/: Internal.hs
src/runtime/haskell/PGF/: Binary.hs  CId.hs  Data.hs  Expr.hs  Forest.hs  Haskell.hs  Linearize.hs  Macros.hs  Morphology.hs  OldBinary.hs  Optimize.hs  Paraphrase.hs  Parse.hs  Printer.hs  Probabilistic.hs  SortTop.hs  TrieMap.hs  TypeCheck.hs  VisualizeTree.hs
src/runtime/haskell/PGF2/: ByteCode.hs  Expr.hs  Expr.hsc  FFI.hsc  Internal.hsc  Transactions.hsc  Type.hsc
src/runtime/haskell/tests/: basic.gf  basic.hs  basic.pgf  basic.pmcfg  basic_cnc.gf  linearization.hs  transactions.hs  typechecking.hs
src/runtime/java/: Makefile  jpgf.c
src/runtime/javascript/: .eslintrc.js  .gitignore  DEPRECATED.md  Dockerfile  README.md  binding.cpp  binding.gyp  build-wasm.sh  constants.ts  errno.ts  expr.ts  ffi.ts  gflib.js  grammar.js  index.js  index.ts  jest.config.js  jspgf.js  package-lock.json  package.json  pgf.js  test-node.js  test-web.html  test-web.js  translator.html  tsconfig.json
src/server/: CGI.hs  CGIUtils.hs  Cache.hs  PGFService.hs  RunHTTP.hs  URLEncoding.hs  gf-server.cabal  lighttpd.conf  pgf-fcgi.hs  pgf-service.cabal
src/server/transfer/: Fold.hs
src/tools/: gf-tools.cabal
src/www/: index.html  robots.txt
testsuite/: run.hs
testsuite/canonical/: run-on-grammar.sh  run.sh
testsuite/lpgf/: Bind.gf  Bind.treebank  Bind.trees  BindCnc.gf  Foods.gf  Foods.treebank  Foods.trees  FoodsLat.gf  LexFoodsLat.gf  Params.treebank  ParamsCnc.gf  Pre.gf  Pre.treebank  Pre.trees  PreCnc.gf  Projection.trees  README.md  Scratch.gf  Scratch.treebank  ScratchCnc.gf  TablesCnc.gf  Walking.gf  Walking.hs  WalkingEng.gf  WalkingGer.gf  Zero.gf  ZeroEng.gf  ZeroGer.gf  bench.hs  mkTreebank.sh  run-bench.sh  run-phrasebook.sh  run.hs  test.hs
(+327 files in other folders)
