name: pgf2
version: 1.2.0
synopsis: Bindings to the C version of the PGF runtime
description:
  GF, Grammatical Framework, is a programming language for multilingual grammar applications.
  GF grammars are compiled into Portable Grammar Format (PGF) which can be used with the PGF runtime, written in C.
  This package provides Haskell bindings to that runtime.
homepage: https://www.grammaticalframework.org
license: LGPL-3
license-file: LICENSE
author: Krasimir Angelov
maintainer: kr.angelov@gmail.com
category: Language
build-type: Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version: >=1.10

library
  exposed-modules:
    PGF2,
    PGF2.Internal
  other-modules:
    PGF2.FFI,
    PGF2.Expr,
    PGF2.Type
  build-depends:
    base >=4.3 && <5,
    containers,
    pretty
  default-language: Haskell2010
  build-tools: hsc2hs
  extra-libraries: pgf gu
  cc-options: -std=c99
  c-sources: utils.c

-- executable pgf-shell
--   main-is: pgf-shell.hs
--   hs-source-dirs: examples
--   build-depends:
--     base,
--     containers,
--     lifted-base,
--     mtl,
--     pgf2
--   default-language: Haskell2010
--   if impl(ghc>=7.0)
--     ghc-options: -rtsopts
