name: pgf
version: 3.11.0-git

cabal-version: 1.22
build-type: Simple
license: OtherLicense
category: Natural Language Processing
synopsis: Grammatical Framework
description: A library for interpreting the Portable Grammar Format (PGF)
homepage: https://www.grammaticalframework.org/
bug-reports: https://github.com/GrammaticalFramework/gf-core/issues
tested-with: GHC==7.10.3, GHC==8.0.2, GHC==8.10.4

library
  default-language: Haskell2010
  build-depends:
    array >= 0.5.1 && < 0.6,
    base >= 4.9.1 && < 4.15,
    bytestring >= 0.10.8 && < 0.11,
    containers >= 0.5.7 && < 0.7,
    ghc-prim >= 0.5.0 && < 0.7,
    mtl >= 2.2.1 && < 2.3,
    pretty >= 1.1.3 && < 1.2,
    random >= 1.1 && < 1.3,
    utf8-string >= 1.0.1.1 && < 1.1

  if impl(ghc<8.0)
    build-depends:
      fail >= 4.9.0 && < 4.10

  other-modules:
    -- not really part of GF but I have changed the original binary library
    -- and we have to keep the copy for now.
    Data.Binary
    Data.Binary.Put
    Data.Binary.Get
    Data.Binary.Builder
    Data.Binary.IEEE754

--ghc-options: -fwarn-unused-imports
--if impl(ghc>=7.8)
--  ghc-options: +RTS -A20M -RTS
  ghc-prof-options: -fprof-auto

  exposed-modules:
    PGF
    PGF.Internal
    PGF.Haskell

  other-modules:
    PGF.Data
    PGF.Macros
    PGF.Binary
    PGF.Optimize
    PGF.Printer
    PGF.CId
    PGF.Expr
    PGF.Generate
    PGF.Linearize
    PGF.Morphology
    PGF.Paraphrase
    PGF.Parse
    PGF.Probabilistic
    PGF.SortTop
    PGF.Tree
    PGF.Type
    PGF.TypeCheck
    PGF.Forest
    PGF.TrieMap
    PGF.VisualizeTree
    PGF.ByteCode
    PGF.OldBinary
    PGF.Utilities
