name:                pgf2
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://www.grammaticalframework.org
license:             LGPL-3
--license-file:        LICENSE
author:              Krasimir Angelov, Inari
maintainer:          
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:     PGF2, PGF2.Internal,
                       -- backwards compatibility API:
                       PGF
  other-modules:       PGF2.FFI, PGF2.Expr, PGF2.Type
  build-depends:       base >=4.3, containers, pretty, array, random
  -- hs-source-dirs:      
  default-language:    Haskell2010
  build-tools:         hsc2hs

  extra-libraries:     pgf
  cc-options:          -std=c99
  c-sources:           utils.c

test-suite basic
  type:       exitcode-stdio-1.0
  main-is:    tests/basic.hs
  default-language:    Haskell2010
  build-depends: base, HUnit, pgf2
