name: pgf2
version: 2.0.0

cabal-version: 1.22
build-type: Simple
license: LGPL-3
license-file: LICENSE
category: Natural Language Processing
-- synopsis: Bindings to the C version of the PGF runtime
-- description:
--   GF, Grammatical Framework, is a programming language for multilingual grammar applications.
--   GF grammars are compiled into Portable Grammar Format (PGF) which can be used with the PGF runtime, written in C.
--   This package provides Haskell bindings to that runtime.
homepage: https://www.grammaticalframework.org/
bug-reports: https://github.com/GrammaticalFramework/gf-core/issues
author: Krasimir Angelov
-- tested-with: GHC==7.10.3, GHC==8.0.2, GHC==8.10.4
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    PGF2,
    PGF2.Internal,
    -- backwards compatibility API:
    PGF
  other-modules:
    PGF2.FFI,
    PGF2.Expr,
    PGF2.Type
  build-depends:
    base >= 4.3, -- >= 4.9.1 && < 4.15,
    containers, -- >= 0.5.7 && < 0.7,
    pretty, -- >= 1.1.3 && < 1.2,
    array,
    random
  default-language: Haskell2010
  build-tools: hsc2hs
  extra-libraries: pgf
  cc-options: -std=c99
  c-sources: utils.c

test-suite basic
  type: exitcode-stdio-1.0
  main-is: tests/basic.hs
  default-language: Haskell2010
  build-depends:
    base,
    HUnit,
    pgf2 >= 2.0.0
